--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html lang="en">
     <head>
       <meta charset="utf-8" />
-      <link rel="stylesheet" href="./styles.css">
+      <link rel="stylesheet" type="text/css" href="main.css">
       <title>Anti-Hero Survey Form</title>
     </head>
     <body>
