--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="en">
     <head>
       <meta charset="utf-8" />
+      <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
       <link rel="stylesheet" type="text/css" href="main.css">
       <title>Anti-Hero Survey Form</title>
     </head>
